--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 					</div>
 					<div class="line"></div>
 					<div class="scroll-cont01-bbs">
-						<h3>keep健身教练</h3>
+						<h3>bbs论坛</h3>
 						<p>项目介绍：</p>
 						<h4>“论坛”包含了论坛主页面、登录注册窗口、发帖，回帖，回复，删帖，顶贴等。</h4>
 						<p>在项目中:</p>
