--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 	<main>
 	<!-- 首页 -->
-		<section id="home" class="scroll-sy" style="background-image: url(./image/bg3.jpg);">
+		<section id="home" class="scroll-sy">
 			<div  class="container" >
 				<div class="cont-sy">
 					<div class="text-center title">
